--- a/functions/package.json
+++ b/functions/package.json
@@ -15,10 +15,11 @@
     "busboy": "^0.3.1",
     "firebase": "^7.16.1",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1"
+    "firebase-functions": "^3.6.1",
+    "uuidv4": "^6.2.3"
   },
   "devDependencies": {
-    "firebase-functions-test": "^0.2.0"
+    "firebase-functions-test": "^0.2.1"
   },
   "private": true
 }
